fix contact form on mobile

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -49,6 +49,9 @@ a
   flex-direction: column
   justify-content: space-between
   height: 50vh
+  @media screen and (max-width: $breakpoint-tablet-width) 
+    height: 65vh
+
 
 
 .container
@@ -360,9 +363,7 @@ nav
     text-align: unset !important
   
 
-  @media screen and (max-width: $breakpoint-tablet-width)
-    padding-top: 7rem !important
-    text-align: center
+  
 
 
 .image-flex
